<resources>
    <string name="app_name">MeetHere</string>
    <string name="login">Login!</string>
    <string name="login_button">Sign in with Google!</string>
    <string name="facebook_app_id">423036458042456</string>
    <string name="fb_login_protocol_scheme">fb423036458042456</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnected</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User profile</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="my_service_desc">Location description</string>
    <string name="title_activity_mapsdsa">Map</string>
    <string name="maps">Maps</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="surname">Surname</string>
    <string name="add_user">Add User</string>
    <string name="key_web_service">SECRET</string>
</resources>
