<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chinet.meethere.MainActivity">

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="goLogin"
        android:id="@+id/goLoginButton" />

    <Button
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goLoginButton"
        android:layout_alignStart="@+id/goLoginButton"
        android:layout_marginTop="15dp"
        android:onClick="goUserView"
        android:id="@+id/goUserViewButton" />

    <Button
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goUserViewButton"
        android:layout_alignStart="@+id/goUserViewButton"
        android:layout_marginTop="15dp"
        android:onClick="goLocationActivity"
        android:id="@+id/goLocationActivityButton" />

    <Button
        android:text="@string/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goLocationActivityButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:onClick="goMapsActivity"
        android:id="@+id/goMapsActivityButton" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goMapsActivityButton"
        android:layout_alignStart="@+id/goMapsActivityButton"
        android:layout_marginTop="24dp"
        android:onClick="goSearchActivity"
        android:id="@+id/goSearchActivityButton" />
</RelativeLayout>
