<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chinet.meethere.SearchFriendActivity">

    <ListView
        android:id="@+id/searchFriendsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:layout_marginTop="39dp"
        android:onClick="searchFriend"
        android:layout_below="@+id/nameText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/searchButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/surnameText"
        android:layout_below="@+id/nameText"
        android:layout_alignEnd="@+id/searchButton" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/surnameText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/nameTextView" />

    <TextView
        android:text="@string/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/surnameTextView"
        android:layout_alignBottom="@+id/surnameText"
        android:layout_alignStart="@+id/nameTextView" />

</RelativeLayout>
